--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -11,7 +11,7 @@
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-md-8 offset-md-2" th:if="${#authorization.expression('isAuthenticated()')}">
             <h2 class="text-center mb-4">User Profile</h2>
             <div class="card">
                 <div class="card-body">
@@ -41,6 +41,13 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="d-grid gap-2">
+        <th:block th:unless="${#authorization.expression('isAuthenticated()')}">
+            <a class="btn btn-primary" href="/login" role="button">Вхід</a>
+            <a class="btn btn-outline-secondary" href="/register" role="button">Реєстрація</a>
+        </th:block>
     </div>
 </div>
 
