--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,22 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Notes Online</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
 </head>
 
 <body class="text-center">
 
 <main class="form-signin">
-    <img src="/images/logo.png" alt="logo">
-    <h1 class="h3 mb-3 fw-normal">Notes online</h1>
+    <img src="/images/logo.png" alt="logo" class="mb-4 logo">
+    <h1 class="h3 mb-3 fw-normal styled-text">Notes online</h1>
 
     <div class="d-grid gap-2">
-        <th:block th:if="${#authorization.expression('isAuthenticated()')}">
-            <a class="btn btn-primary" href="/profile" role="button">Profile</a>
-            <a class="btn btn-outline-secondary" href="/logout" role="button">Logout</a>
+        <th:block th:if="${#authorization.expression('isAuthenticated')}">
+            <a class="btn btn-lg mb-2 gradient-green" href="/profile" role="button">Profile</a>
+            <a class="btn btn-lg gradient-purple" href="/logout" role="button">Logout</a>
         </th:block>
-        <th:block th:unless="${#authorization.expression('isAuthenticated()')}">
-            <a class="btn btn-primary" href="/login" role="button">Login</a>
-            <a class="btn btn-outline-secondary" href="/register" role="button">Register</a>
+        <th:block th:unless="${#authorization.expression('isAuthenticated')}">
+            <a class="btn btn-lg mb-2 gradient-green" href="/login" role="button">Login</a>
+            <a class="btn btn-lg gradient-purple" href="/register" role="button">Register</a>
         </th:block>
     </div>
 </main>
