--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,56 +1,70 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>User Profile</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+          integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="/css/profile-style.css">
 </head>
+
 <body>
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-md-8 offset-md-2" th:if="${#authorization.expression('isAuthenticated()')}">
-            <h2 class="text-center mb-4">User Profile</h2>
+        <div class="col-md-8 offset-md-2">
+            <h2 class="text-center mb-4 styled-text">User Profile</h2>
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title" th:text="${user.fullName}"></h4>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h4 class="card-title text-center mb-3" th:text="${user.fullName}"></h4>
+                        <a th:href="@{/logout}" class="btn btn-danger">Logout</a>
+                    </div>
                     <p class="card-text" th:text="${user.email}"></p>
 
-                    <h5 class="mt-4">Notes:</h5>
-                    <ul class="list-group">
-                        <li class="list-group-item" th:each="note : ${user.notes}">
-                            <div class="d-flex justify-content-between align-items-center">
-                                <span th:text="${note.title}"></span>
-                                <div class="btn-group" role="group">
-                                    <a th:href="@{/edit/{id}(id=${note.id})}" class="btn btn-primary btn-sm">Edit</a>
-                                    <a th:href="@{/delete/{id}(id=${note.id})}" class="btn btn-danger btn-sm">Delete</a>
-                                    <a th:href="@{/download/{id}(id=${note.id})}" class="btn btn-success btn-sm">Download</a>
+                    <h5 class="mt-4 text-center">Notes:</h5>
+                    <th:block th:each="note : ${user.notes}">
+                        <div class="note-card">
+                            <div class="card-body" th:style="'border-radius: 10px; border: 2px solid ' + ${note.priority.getColorCode()} + '; background: ' + ${note.priority.getBackColorCode()}">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <h6 class="custom-card-title card-title fw-bold" th:text="${note.title}"></h6>
+                                    <div class="btns-group" role="group">
+                                        <a th:href="@{/edit/{id}(id=${note.id})}" class="btn btn-primary btn-sm">
+                                            <i class="fas fa-edit"></i>
+                                        </a>
+                                        <a th:href="@{/delete/{id}(id=${note.id})}" class="btn btn-danger btn-sm">
+                                            <i class="fas fa-trash-alt"></i>
+                                        </a>
+                                        <a th:href="@{/download/{id}(id=${note.id})}" class="btn btn-success btn-sm">
+                                            <i class="fas fa-download"></i>
+                                        </a>
+                                    </div>
                                 </div>
+                                <p class="card-text custom-p" th:text="${note.text}"></p>
+                                <span th:style="'background: ' + ${note.priority.getColorCode()}" class="badge" th:text="${note.priority}"></span>
                             </div>
-                            <p class="card-text" th:text="${note.text}"></p>
-                            <span class="badge bg-primary" th:text="${note.priority}"></span>
-                        </li>
-                    </ul>
+                        </div>
+                    </th:block>
 
-                    <div class="mt-3">
-                        <a th:href="@{/add}" class="btn btn-primary">Add new</a>
+                    <div class="mt-3 d-flex justify-content-center align-items-center">
+                        <a th:href="@{/add}" class="btn btn-primary btn-circle btn-add">
+                            <i class="fas fa-plus" style="font-size: 24px; color: white;"></i>
+                        </a>
                     </div>
+
 
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="d-grid gap-2">
-        <th:block th:unless="${#authorization.expression('isAuthenticated()')}">
-            <a class="btn btn-primary" href="/login" role="button">Вхід</a>
-            <a class="btn btn-outline-secondary" href="/register" role="button">Реєстрація</a>
-        </th:block>
-    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
