--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -28,7 +28,7 @@
                     <p class="card-text" th:text="${user.email}"></p>
 
                     <h5 class="mt-4 text-center">Notes:</h5>
-                    <th:block th:each="note : ${user.notes}">
+                    <th:block th:each="note : ${notes}">
                         <div class="note-card">
                             <div class="card-body" th:style="'border-radius: 10px; border: 2px solid ' + ${note.priority.getColorCode()} + '; background: ' + ${note.priority.getBackColorCode()}">
                                 <div class="d-flex justify-content-between align-items-center">
