--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -34,13 +34,13 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     <h6 class="custom-card-title card-title fw-bold" th:text="${note.title}"></h6>
                                     <div class="btns-group" role="group">
-                                        <a th:href="@{/edit/{id}(id=${note.id})}" class="btn btn-primary btn-sm">
+                                        <a th:href="@{/notes/edit/{id}(id=${note.id})}" class="btn btn-primary btn-sm">
                                             <i class="fas fa-edit"></i>
                                         </a>
-                                        <a th:href="@{/delete/{id}(id=${note.id})}" class="btn btn-danger btn-sm">
+                                        <a th:href="@{/notes/delete/{id}(id=${note.id})}" class="btn btn-danger btn-sm">
                                             <i class="fas fa-trash-alt"></i>
                                         </a>
-                                        <a th:href="@{/download/{id}(id=${note.id})}" class="btn btn-success btn-sm">
+                                        <a th:href="@{/notes/download/{id}(id=${note.id})}" class="btn btn-success btn-sm">
                                             <i class="fas fa-download"></i>
                                         </a>
                                     </div>
@@ -52,7 +52,7 @@
                     </th:block>
 
                     <div class="mt-3 d-flex justify-content-center align-items-center">
-                        <a th:href="@{/add}" class="btn btn-primary btn-circle btn-add">
+                        <a th:href="@{/notes/add}" class="btn btn-primary btn-circle btn-add">
                             <i class="fas fa-plus" style="font-size: 24px; color: white;"></i>
                         </a>
                     </div>
