--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -50,16 +50,19 @@
                 <div class="card-body">
                     <form action="/register" method="post" th:object="${user}">
                         <div class="form-group">
+                            <div th:each="err : ${#fields.errors('fullName')}" th:text="${err}" class="alert alert-danger" role="alert"></div>
                             <label for="fullName">Full Name:</label>
                             <input type="text" class="form-control" id="fullName" name="fullName"
                                    th:value="${user.fullName}" placeholder="Full Name" />
                         </div>
                         <div class="form-group">
+                            <div th:each="err : ${#fields.errors('email')}" th:text="${err}" class="alert alert-danger" role="alert"></div>
                             <label for="email">Email:</label>
                             <input type="email" class="form-control" id="email" name="email"
                                    th:value="${user.email}" placeholder="Email" />
                         </div>
                         <div class="form-group">
+                            <div th:each="err : ${#fields.errors('password')}" th:text="${err}" class="alert alert-danger" role="alert"></div>
                             <label for="password">Password:</label>
                             <input type="password" class="form-control" id="password" name="password"
                                    placeholder="Password" />
