--- a/src/main/resources/templates/note-edit.html
+++ b/src/main/resources/templates/note-edit.html
@@ -29,6 +29,10 @@
                             <textarea class="form-control" id="text" name="text" th:text="${note.text}" rows="4" placeholder="Text"></textarea>
                         </div>
                         <div class="form-group mb-2">
+                            <label for="date">Date and Time:</label>
+                            <input type="datetime-local" class="form-control" id="date" name="date" th:value="${note.date}" />
+                        </div>
+                        <div class="form-group mb-2">
                             <label for="priority">Priority:</label>
                             <select class="form-select" id="priority" name="priority" th:value="${note.priority}">
                                 <option value="LOW">Low</option>
