--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -47,6 +47,7 @@
                                 </div>
                                 <p class="card-text custom-p" th:text="${note.text}"></p>
                                 <span th:style="'background: ' + ${note.priority.getColorCode()}" class="badge" th:text="${note.priority}"></span>
+                                <span th:text="${#temporals.format(note.date, 'dd-MM-yyyy HH:mm')}" class="m-2 fw-bold"></span>
                             </div>
                         </div>
                     </th:block>
@@ -56,7 +57,6 @@
                             <i class="fas fa-plus" style="font-size: 24px; color: white;"></i>
                         </a>
                     </div>
-
 
                 </div>
             </div>
